codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__github_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1151
expression: rendered
---
╭──────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! <VERSION> -> 9.9.9                                          │
│ Download the latest release: https://github.com/dkropachev/codex/releases/latest │
│                                                                                  │
│ See full release notes:                                                          │
│ https://github.com/dkropachev/codex/releases/latest                              │
╰──────────────────────────────────────────────────────────────────────────────────╯
