codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__unmanaged_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭───────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! <VERSION> -> 9.9.9                                                           │
│ Install the managed fork: https://github.com/dkropachev/codex/releases/latest/download/install.sh │
│                                                                                                   │
│ See full release notes:                                                                           │
│ https://github.com/dkropachev/codex/releases/latest                                               │
╰───────────────────────────────────────────────────────────────────────────────────────────────────╯
